[gd_scene load_steps=4 format=3 uid="uid://b0fmapexhgyc1"]

[ext_resource type="Texture2D" uid="uid://lg8dq1ppnt8j" path="res://assets/images/arrow_switch.png" id="1_eet21"]
[ext_resource type="Script" path="res://assets/scripts/hallway.gd" id="1_lacf1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxc2v"]
size = Vector2(32, 32)

[node name="hallway" type="Node2D"]
script = ExtResource("1_lacf1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_sxc2v")

[node name="ArrowSwitch" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_eet21")
centered = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
